tests/miniJava/pos/001095_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) while ( 0 ) { } else java = 0 ; } }
