tests/miniJava/neg/004833_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) true { return 0 ; } }
